2003-01-11  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/languages/PortugueseBrazilian.tab: use new include
	functionality to get default strings from Portuguese.

	* www/include/languages/Portuguese.tab: add missing newline.

	* www/include/languages/Base.tab: move Savannah-specific strings
	into their own .tab files.

	* www/include/languages/Spanish.tab: ditto.

	* www/themes/savannah_*/{Base,Spanish}.tab: new files with
	Savannah-specific strings.

	* www/include/BaseLanguage.class(loadLanguage): allow
	customisations of strings on a per-theme basis.
	(loadLanguageFile): implement "include" functionality.

	* www/survey/survey_resp.php: Audit: escape special characters
	from user input before submitting to database.

	* www/survey/admin/edit_survey.php: ditto.

	* www/survey/admin/add_survey.php: ditto.

	* www/survey/admin/add_survey.php: add missing <, don't display
	empty table if there are no existing surveys.

	* www/new/index.php: use new frs_dlstats_grouptotal_vw

	* www/include/features_boxes.php(show_top_downloads): use new
	frs_dlstats_grouptotal_vw.

	* cronjobs/db_stats_agg.php: remove file download stat
	calculations.

	* db/20030112.sql: new file.

	* common/frs/FRSRelease.class(create): yet another pg_atoi fix.

2003-01-10  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/themes/osx/Theme.class: valid XHTML 1.0 Transitional.

	* www/news/news_utils.php: make project summary valid XHTML 1.0
	Transitional.

	* www/include/trove.php: ditto.

	* www/include/Layout.class: ditto.

	* www/include/project_home.php: ditto.

	* www/include/html.php: make / valid XHTML 1.0 Transitional.

	* www/include/Layout.class: ditto.

	* www/include/languages/Base.tab: ditto.

	* common/include/utils.php: ditto.

	* www/index_std.php: ditto.

	* www/news/news_utils.php: ditto.

	* www/my/diary.php: bug 158: pg_atoi when inserting diary entry.

	* common/include/utils.php(util_make_links): exclude <> from
	URL regexp to avoid sucking in the <br /> tag.
